# oww-c

./: BUILD.md  CMakeLists.txt  oww.cpp  oww.h  oww.hpp  toolchain-aarch64.cmake
build-aarch64/: CMakeCache.txt
demo/: main_alsa.cpp
include/: oww.h  oww.h.backup
src/: oww.cpp  oww.cpp.full_backup
